--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -12,10 +12,13 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  background-color: white;
 }
 
 .home-picture {
-  height: 100%;
+  width:60vw;
+  height: 88vh;
+  z-index: -1;
 }
 
 .logo {
@@ -23,32 +26,100 @@ html {
   width: auto;
 }
 
-.home {
-  height: 80vh;
-  width: 100vw;
-  display: flex;
-  background-color: white;
+.home{
+    height: 82vh;
+    width: 100vw;   
+    display: flex;
+    background-color: white;
 }
 
 .home-side-left {
-  position: relative;
-  top: 40%;
-  transform: translate(0, -50%);
-  width: 80%;
-  height: 60%;
+    position: relative;
+    z-index: 0;
+  width: 60vw;
+  height: 88vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-basis: 55%;
 }
 
+.home-shadow:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 200%);
+    filter: blur(20px); /* Adjust the blur radius as needed */
+  }
+
 .home-side-right {
+    z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 45%;
+  position: absolute;
+  height: 88vh;
+  left:61%;
+  width: 50%;
   color: #f170aa;
+  background-color: white;
+  box-shadow: -10px 0px 80px 100px white;
+}
+
+.home-main-title{
+    position: absolute;
+    top:10%;
+    left:-15%;
+    width:60%;
+    font-size: 3vw;
+    color: #2d2767;
+    font-weight: 1 !important;
+}
+
+.home-explanation{
+    position:absolute;
+    top:45%;
+    left:-15%;
+    width:70%;
+    font-size: 1.3vw;
+    color:#5B5594;
+    font-weight: 1;
+}
+
+.learn-more{
+    position: absolute;
+    top:64%;
+    left:-15%;
+    font-size: 1.5vw;
+    background-color: #f170aa;
+    width: 20%;
+    height: 8%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    justify-content: center;
+    color: #2d2767;
+}
+
+.free-trial{
+    position: absolute;
+    top:79%;
+    left:-15%;
+    font-size: 1.5vw;
+    background-color: #f170aa;
+    width: 30%;
+    height: 8%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    justify-content: center;
+    color: #2d2767;
 }
 
 .about-us-btn {
@@ -67,9 +138,21 @@ html {
   color: white;
 }
 
-#about-us {
-  background-color: white;
-  padding: 1% 5% 10% 5%;
+
+#about-us{
+    margin-top: 10%;
+   background-color: white;
+    padding:1% 5% 10% 5%;
+    position: relative;
+    z-index: 100;
+}
+
+.hearts{
+    position: absolute;
+    width: 10%;
+    top:5%;
+    left:73%;
+    filter: invert(64%) sepia(96%) saturate(1585%) hue-rotate(294deg) brightness(96%) contrast(96%);
 }
 
 .about-us-title {
@@ -86,16 +169,54 @@ html {
 
 .about-us-photo {
   padding: 3% 0;
-  width: 30vw;
-  height: auto;
+  width: 15vw;
   border-radius: 10px;
 }
 
 .about-us-text {
-  width: 50%;
+  line-height: 33px;
+  width: 70%;
   font-size: 1.3em;
+  color: white;
   background-color: #2d2767;
-  font-weight: 50 !important;
+  font-weight:1 !important;
   padding: 2%;
   border-radius: 10px;
+  text-align: justify;
+}
+
+#solutions{
+    width:100vw;
+    padding:1% 5% 10% 5%;
+    position: relative;
+}
+
+.solutions-title {
+    padding-left: 7vw;
+    text-align: start;
+    color: #2d2767;
+    width: 75%;
+    padding-bottom: 2%;
+}
+
+.solutions-photo{
+    width: 40vw;
+}
+
+.solutions-text{
+    width: 50%;
+    font-size: 1.3em !important;
+    color: white;
+    background-color: #2d2767;
+    font-weight: 50 !important;
+    padding: 2%;
+    border-radius: 10px;
+}
+
+.solutions-content{
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+    height: 100%;
+    gap:10%;
 }
