--- a/client/src/pages/navigation/nav.css
+++ b/client/src/pages/navigation/nav.css
@@ -7,18 +7,15 @@
   display: flex;
   position: absolute;
   top: 0;
-  gap: 75%;
+  gap: 65%;
   font-family: "Patua One", serif;
   font-weight: 400;
   font-style: normal;
+  z-index: 100;
 }
 
 .nav-logo {
-  position: relative;
-  top: 50%;
-  transform: translate(0, -50%);
-  height: 85%;
-  padding-left: 20px;
+    height: 80%;
 }
 
 .nav-side {
@@ -30,6 +27,22 @@
   cursor: pointer;
   font-size: 1.6em;
 }
+
+.nav-logo-group{
+    position: relative;
+    display: flex;
+    top: 55%;
+    transform: translate(0, -50%);
+    height: 100%;
+    color: white;
+    padding-left: 20px;
+    text-align: center;
+    width: 12%;
+}
+
+a {
+    text-decoration: none !important;
+  }
 
 .nav-side a {
   color: white;
