--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -159,7 +159,6 @@ html {
   text-align: end;
   color: #2d2767;
   width: 75%;
-  padding-bottom: 2%;
 }
 
 .about-us-content {
@@ -169,13 +168,15 @@ html {
 
 .about-us-photo {
   padding: 3% 0;
-  width: 15vw;
+  height: 60vh;
   border-radius: 10px;
 }
 
 .about-us-text {
+    font-family: Arial, Helvetica, sans-serif !important;
   line-height: 33px;
   width: 70%;
+  height: 40%;
   font-size: 1.3em;
   color: white;
   background-color: #2d2767;
@@ -185,38 +186,13 @@ html {
   text-align: justify;
 }
 
-#solutions{
-    width:100vw;
-    padding:1% 5% 10% 5%;
-    position: relative;
+.data-list{
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 10px;
+    color:grey;
+    position: absolute;
+    top:56vh;
+    width:45vw;
+    left:51vw;
 }
 
-.solutions-title {
-    padding-left: 7vw;
-    text-align: start;
-    color: #2d2767;
-    width: 75%;
-    padding-bottom: 2%;
-}
-
-.solutions-photo{
-    width: 40vw;
-}
-
-.solutions-text{
-    width: 50%;
-    font-size: 1.3em !important;
-    color: white;
-    background-color: #2d2767;
-    font-weight: 50 !important;
-    padding: 2%;
-    border-radius: 10px;
-}
-
-.solutions-content{
-    display: flex;
-    flex-direction: row-reverse;
-    width: 100%;
-    height: 100%;
-    gap:10%;
-}
