--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,18 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Asul:wght@400;700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Luckiest+Guy&family=Patua+One&display=swap");
 
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  margin-top: 12vh;
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f170aa; 
+  border-radius: 10px;
+}
+
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #F53E90; 
+}
+
 .landing-page {
+  overflow-y: scroll !important;
+  overflow-x: hidden;
   position: absolute;
   top: 12vh;
   scroll-behavior: smooth;
-  font-family: "Patua One", serif;
+  font-family:  Arial, Helvetica, sans-serif;;
   font-weight: 400;
   font-style: normal;
+  z-index: 0;
 }
 
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
   background-color: white;
+}
+
+.main{
+  overflow-y: hidden;
 }
 
 .home-picture {
