--- a/client/src/pages/navigation/nav.css
+++ b/client/src/pages/navigation/nav.css
@@ -8,10 +8,10 @@
   position: absolute;
   top: 0;
   gap: 65%;
-  font-family: "Patua One", serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-style: normal;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .nav-logo {
@@ -26,6 +26,8 @@
   height: fit-content;
   cursor: pointer;
   font-size: 1.6em;
+  display: flex;
+  gap: 3vw;
 }
 
 .nav-logo-group{
@@ -37,7 +39,15 @@
     color: white;
     padding-left: 20px;
     text-align: center;
-    width: 12%;
+    width: 17%;
+}
+
+.nav-logo-text{
+  position: relative;
+  top:40%;
+  transform: translate(0,-50%);
+  font-size: 2vw;
+  height: 100%;
 }
 
 a {
